fixed: geowidget not displayed full width in pages mode when not wrapped inside a group, closes https://github.com/kobotoolbox/enketo-express/issues/186

--- a/src/sass/grid/_main.scss
+++ b/src/sass/grid/_main.scss
@@ -44,8 +44,8 @@ h4 + .or-repeat {
     @include border-box;
 }
 
-// override to flexboxes in pages mode
-.pages.or [role="page"].current {
+// override to flexboxes in pages mode, except when question = page
+.pages.or [role="page"].current:not(.question) {
     @include display-flex;
     @include flex-wrap(wrap);
     @include flex-direction(row);
